app-meshify.yaml
kind: VirtualService
apiVersion: servicemesh.oci.oracle.com/v1beta1
metadata:
  name: f1-booking-service
spec:
  mesh:
    ref:
      name: f1-booking
  defaultRoutingPolicy:
    type: UNIFORM
  compartmentId: ocid1.compartment.oc1..aaaaaaaabwqnkg5r4sgb72edair3gaxqckws6p2qgxlyq67mnnqxvntwm4vq
  hosts:
    - f1-booking-service:7000
    - f1-booking-service
---
kind: VirtualService
apiVersion: servicemesh.oci.oracle.com/v1beta1
metadata:
  name: f1-seat-booking-service
spec:
  mesh:
    ref:
      name: f1-booking
  defaultRoutingPolicy:
    type: UNIFORM
  compartmentId: ocid1.compartment.oc1..aaaaaaaabwqnkg5r4sgb72edair3gaxqckws6p2qgxlyq67mnnqxvntwm4vq
  hosts:
    - f1-seat-booking-service:7001
    - f1-seat-booking-service
---
kind: VirtualService
apiVersion: servicemesh.oci.oracle.com/v1beta1
metadata:
  name: f1-payment-service
spec:
  mesh:
    ref:
      name: f1-booking
  defaultRoutingPolicy:
    type: UNIFORM
  compartmentId: ocid1.compartment.oc1..aaaaaaaabwqnkg5r4sgb72edair3gaxqckws6p2qgxlyq67mnnqxvntwm4vq
  hosts:
    - f1-payment-service:7002
    - f1-payment-service
---
kind: VirtualService
apiVersion: servicemesh.oci.oracle.com/v1beta1
metadata:
  name: otmm-tcs
spec:
  mesh:
    ref:
      name: f1-booking
  defaultRoutingPolicy:
    type: UNIFORM
  compartmentId: ocid1.compartment.oc1..aaaaaaaabwqnkg5r4sgb72edair3gaxqckws6p2qgxlyq67mnnqxvntwm4vq
  hosts:
    - otmm-tcs:9000
    - otmm-tcs
